kubernetes/apps/observability/victoria-logs/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-logs
spec:
  description: "Network policy for Victoria Logs"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs-single
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    # Allow log ingestion from all namespaces
    - fromEntities:
        - cluster
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
